glFusion ChangeLog

v1.1.5
------
- Moved maintenance_mode to the online configuration (Mark)
- Added default sitedown.html page (Eric)
- Fixed typo in install script example path and clarified help text (Eric)
- Comments did not properly retain the post mode setting (Mark)
- Fixed issue with URL rewrite that appears on some hosting services where
  the parameter array is not properly recognized (Mark)
- Reworked daily digest code to support both HTML and text messages.  It is
  now template driven (Mark)
- Rename signature (in user profile) to Tag Line (Mark)
- Email did not honor the priority flag (Mark)
- Ability to use remote IP instead of referring URL for security tokens (Mark)
- Fixed censor mode select (Mark)
- Add option for user to select search result format (Mark)
- Add block name to the admin list of blocks (Mark)
- Updated htmLawed to v1.1.8.1 (Mark)
- Implemented new profile APIs (Mark)
- New configuration option to hide the 'Content' tab in the Account
  Settings (Mark)
- Fixed incorrect field type for SMTP host (Mark)
- Updated FCKeditor to v2.6.4.1 (Mark)
- Search dates were not properly validated prior to use (Mark)
- Fixed several E_ALL errors (Mark)
- Multi-page comment support was broken for plugins (Mark)
- Support usernames upto 32 characters in length (Mark)
- Installation - Now support migrating Geeklog v1.4.1+ sites,
  including 1.6.0 (Mark)
- Improved SEO support throughout the system (Mark)
- Core groups can now be edited. (Mark)
- Plugin auto installer did not display correct installed version
  number (Mark)
- Display default glFusion topic icon if no icon is specified (Mark)
- Allow user edit for remote users (Mark)

Bad Behaviour2 Plugin
---------------------
- Updated code base to v2.0.28 (Mark)

Calendar Plugin
---------------
- Improved data validation to ensure values are properly set before
  attempting to use them. (Mark)
- Fixed potential XSS issue when invalid data is presented during
  add / edit event (Mark)